--- a/Server/package.json
+++ b/Server/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server/inngest/server.js",   // production বা normal run
-    "dev": "inngest dev", 
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "server": "nodemon server.js",
-    "inngest": "node Server/inngest/server.js",
+    ,
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,13 +17,11 @@
   "dependencies": {
     "@clerk/express": "^1.7.26",
     "axios": "^1.11.0",
-     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "inngest": "^3.40.1",
-    "jsonwebtoken": "^9.0.0",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0"
   },
